# token-efficient-coding-stack

./: .gitignore  CHALLENGING-TEST-RESULTS.md  CHALLENGING-TEST-SUITE.md  CLAUDE-ONLY-COMPARISON.md  CLAUDE.md  INSTALL.sh  INSTALLATION.md  KNOWN-ISSUES.md  LINUX-INSTALL.md  MODEL-USAGE-ANALYSIS.md  READER-FOCUSED-GUIDE.md  README.md  USAGE-EXAMPLES.md  VALIDATION-SUMMARY.md  WISHLIST-COMPLIANCE.md  gsd-self-optimizing-orchestrator-design.md  quick-install.sh
audit/: README.md  (+16 more)
auzoom/: AUZOOM-AS-READ.md  README.md  pyproject.toml
auzoom/.auzoom/: index.json
auzoom/.auzoom/metadata/: _Users_dhirajd_Documents_claude_auzoom_src_auzoom_models.py_a6d10008.json
auzoom/.claude-plugin/: README.md  mcp-config.json  plugin.json
auzoom/.planning/phases/01-auzoom-implementation/: 01-02-v2-PLAN.md  01-02-v2-SUMMARY.md  01-03-PLAN.md  01-04-SUMMARY.md  REFACTORING-COMPLETE.md
auzoom/assets/: logo.txt
auzoom/docs/: AGENT-SKILL.md  ARCHITECTURE.md  CODING-STANDARD.md  NAMING-CONVENTIONS.md
auzoom/src/auzoom/: __init__.py  cli.py  graph.py  models.py  parser.py  tools.py
auzoom/tests/: test_graph.py  test_lazy_graph.py  test_mcp_server.py  test_parser.py
orchestrator/: pyproject.toml
orchestrator/src/orchestrator/: __init__.py  executor.py  models.py  registry.py  scoring.py
orchestrator/tests/: test_anthropic.py  test_claude_task.py  test_gemini.py  test_mcp_server.py  test_registry.py  test_scoring.py
token-efficiency-stack/: BRIEF.md  IMPLEMENTATION-PLAN.md  ROADMAP.md  STATE.md  pyproject.toml
token-efficiency-stack/auzoom/: __init__.py  models.py  parser.py
token-efficiency-stack/auzoom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
token-efficiency-stack/phases/01-auzoom-parser/: 01-01-PLAN.md  01-02-PLAN.md
token-efficiency-stack/phases/03-orchestrator-core/: 03-01-PLAN.md
(+275 files in other folders)
